[project]
name = "nexus-steg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.1.1",
    "tifffile>=2026.2.16",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
viz = [
    "torchviz",
    "graphviz",
]
